--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "multer": "0.1.6",
     "connect-flash": "^0.1.1",
     "mongoose": "^4.2.7",
-    "markdown": "0.5.0",
     "supervisor": "^0.10.0",
-    "laypage": "^1.1.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "node-markdown": "^0.1.1"
   }
 }
